changed DTO in "api.yml" and related classes
